Complete render of the entire website.

--- a/team/index.html
+++ b/team/index.html
@@ -85,6 +85,18 @@
 <div class="row">
 <div class="frontwall dark">
 <div class="team-member">
+<img src="/images/teampics/carlos_s.jpg">
+<div>
+<h1>
+Carlos
+</h1>
+<h2>
+Delft University of Technology, QuTech
+</h2>
+<p>Carlos loves science, crafts, and art, and sometimes combines them into a beautiful gadget like the Qbead. On top of that, he enjoys mentoring and contributing to diversity in science and engineering. Examples are organizing science-art workshops with asylum seekers in Sweden and the quantum hackathon iQuHACK at MIT. Now at Delft University of Technology and QuTech, Carlos is a professor exploring quantum photonics while he continues to lead outreach projects to democratize science and technology.</p>
+</div>
+</div>
+<div class="team-member">
 <img src="/images/teampics/stefan_s.jpg">
 <div>
 <h1>
@@ -93,7 +105,7 @@ Stefan
 <h2>
 University of Massachusetts Amherst
 </h2>
-<p>Since high school <a href="/stefan">Stefan</a> has enjoyed sharing the wonders of science with others, organizing extraculicular courses and summer break Physics events. While a graduate student at Yale’s Quantum Institute he felt most at home in Yale’s makerspace, preparing contraptions to be used in middle- and high-school outreach events. He continued his reasearch work on photonic quantum computers jointly at MIT and Harvard, but spends much of his free time designing hands-on outreach materials, including the <a href="https://spinwearables.com/">SpinWheel</a>. Now, as a professor at UMass Amherst, he is designing the Qbead as a way to bring the maker ethos to teaching Quantum Information Science.</p>
+<p>Since high school Stefan has enjoyed sharing the wonders of science with others, organizing extraculicular courses and summer break Physics events. While a graduate student at Yale’s Quantum Institute he felt most at home in Yale’s makerspace, preparing contraptions to be used in middle- and high-school outreach events. He continued his reasearch work on photonic quantum computers jointly at MIT and Harvard, but spends much of his free time designing hands-on outreach materials, including the <a href="https://spinwearables.com/">SpinWheel</a>. Now, as a professor at UMass Amherst, he is designing the Qbead as a way to bring the maker ethos to teaching Quantum Information Science.</p>
 </div>
 </div>
 <!--TODO: the other team members-->
