Complete render of the entire website.

--- a/404/index.html
+++ b/404/index.html
@@ -42,7 +42,8 @@
 </header>
 <main>
 <div class="warning">
-<p>The page you were linked to does not exist. It might be in the process of being created, or the link you were using was wrong.</p>
+<p>The page you were linked to does not exist. It might be in the
+process of being created, or the link you were using was wrong.</p>
 </div>
 </main>
 <div id="license">
