--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <meta property="og:description" content="" /> <!--TODO-->
   <meta property="og:image" content="https://spinwearables.com/..." /> <!--TODO-->
   <link rel="image_src" href="https://spinwearables.com/" /> <!--TODO-->
-  <meta name="keywords" content="quantum, education, STEM, outreach, science, electronics, computer science, physics" />
+  <meta name="keywords" content="quantum, education, STEM, outreach,
+science, electronics, computer science, physics" />
   <title>The Qbead</title>
   <style>
   </style>
@@ -56,7 +57,9 @@ The qubit for your hands-on discovery of quantum phenomena.
 </div>
 <div class="row">
 <div class="column">
-<p><a href="/team">We are a group of volunteers</a> with a passion for teaching science, building beautiful things, and harnessing quantum phenomena to create the technology of tomorrow.</p>
+<p><a href="/team">We are a group of volunteers</a> with a passion for
+teaching science, building beautiful things, and harnessing quantum
+phenomena to create the technology of tomorrow.</p>
 </div>
 <div class="column column-long">
 <img src="/images/earlypaperprot2.png">
@@ -69,14 +72,22 @@ The qubit for your hands-on discovery of quantum phenomena.
 </div>
 <!--IMAGE: we need an image here maybe-->
 <div class="column large-text">
-<p>The Qbead comes with a “<a href="/book">Field Guide</a>” containing multiple educational and artistic activities written for students ages 12-212. In addition of the quantum science topics, the Qbead can also be programmed by anyone simply as a beautiful luminescent bluetooth-connected motion-sensing fashion accessory.</p>
+<p>The Qbead comes with a “<a href="/book">Field Guide</a>” containing
+multiple educational and artistic activities written for students ages
+12-212. In addition of the quantum science topics, the Qbead can also be
+programmed by anyone simply as a beautiful luminescent
+bluetooth-connected motion-sensing fashion accessory.</p>
 </div>
 </div>
 <div class="row dark">
 <div class="column">
 <p>Contact us at <a href="mailto:mail@qbead.org">mail@qbead.org</a>!</p>
-<p>At the following link, you can see <a href="/book">our teaching materials</a> that are ready to be shared. We’ll be releasing more hands on activities and associated lessons over the coming months.</p>
-<p><a href="/behindthescenes">Behind-the-scenes pictures of the device and testing runs</a> are also available.<!--TODO: make this page with a lot of pictures from the tracking doc--></p>
+<p>At the following link, you can see <a href="/book">our teaching
+materials</a> that are ready to be shared. We’ll be releasing more hands
+on activities and associated lessons over the coming months.</p>
+<p><a href="/behindthescenes">Behind-the-scenes pictures of the device
+and testing runs</a> are also
+available.<!--TODO: make this page with a lot of pictures from the tracking doc--></p>
 </div>
 </div>
 </main>
