--- a/license/index.html
+++ b/license/index.html
@@ -11,7 +11,8 @@
   <meta property="og:description" content="" /> <!--TODO-->
   <meta property="og:image" content="https://spinwearables.com/..." /> <!--TODO-->
   <link rel="image_src" href="https://spinwearables.com/" /> <!--TODO-->
-  <meta name="keywords" content="spinwheel, education, STEM, outreach, science, engineering day, electronics, computer science, physics" />
+  <meta name="keywords" content="spinwheel, education, STEM, outreach,
+science, engineering day, electronics, computer science, physics" />
   <title>License and Trademark Details</title>
   <style>
   </style>
@@ -39,15 +40,34 @@
 </div>
 <div id="title-bar" >
 <h1 class="title">License and Trademark Details</h1>
-<h2 class="subtitle">For people interested in creating derivative work.</h2>
+<h2 class="subtitle">For people interested in creating derivative
+work.</h2>
 </div>
 </header>
 <main>
 <div class="row dark">
 <div class="column long-text">
-<p>The copyright for this website, the online lessons, and printed materials belongs to SpinWearables LLC and so does the copyright for the code and hardware designs. All of these materials are permissively licensed: The website, lessons, and printed materials can be copied, remixed, and modified, as long as attribution to the original creators is given, and any other constraints of the Creative Commons Attribution-ShareAlike 4.0 International License are fulfilled. Furthermore, the text of the teaching materials can be reused even for commercial purposes, under that same license. The code and hardware designs can be reused under similar conditions, even for commercial purposes, as long as the constraints of the GNU General Public License v3.0 are fulfilled.</p>
-<p>The names “SpinWearables” and “SpinWheel” are trademarks of SpinWearables LLC. Derivative materials can use “inspired by SpinWearables/SpinWheel”, “based on SpinWearables/SpinWheel” or “for/compatible with SpinWearables/SpinWheel” phrasing, but can not use these trademarked names as a substring of their own names or otherwise claim they are endorsed by us.</p>
-<p>If you have any questions, feel free to contact us. We are eager to ensure these materials are easy to share and extend in order to reach more curious minds.</p>
+<p>The copyright for this website, the online lessons, and printed
+materials belongs to SpinWearables LLC and so does the copyright for the
+code and hardware designs. All of these materials are permissively
+licensed: The website, lessons, and printed materials can be copied,
+remixed, and modified, as long as attribution to the original creators
+is given, and any other constraints of the Creative Commons
+Attribution-ShareAlike 4.0 International License are fulfilled.
+Furthermore, the text of the teaching materials can be reused even for
+commercial purposes, under that same license. The code and hardware
+designs can be reused under similar conditions, even for commercial
+purposes, as long as the constraints of the GNU General Public License
+v3.0 are fulfilled.</p>
+<p>The names “SpinWearables” and “SpinWheel” are trademarks of
+SpinWearables LLC. Derivative materials can use “inspired by
+SpinWearables/SpinWheel”, “based on SpinWearables/SpinWheel” or
+“for/compatible with SpinWearables/SpinWheel” phrasing, but can not use
+these trademarked names as a substring of their own names or otherwise
+claim they are endorsed by us.</p>
+<p>If you have any questions, feel free to contact us. We are eager to
+ensure these materials are easy to share and extend in order to reach
+more curious minds.</p>
 </div>
 </div>
 </main>
