--- a/team/index.html
+++ b/team/index.html
@@ -11,7 +11,9 @@
   <meta property="og:description" content="" /> <!--TODO-->
   <meta property="og:image" content="https://spinwearables.com/..." /> <!--TODO-->
   <link rel="image_src" href="https://spinwearables.com/" /> <!--TODO-->
-  <meta name="keywords" content="qbead, quantum information science, quantum computing, STEM, science, science and art, physics, computer science, middle school, high school, textbook" />
+  <meta name="keywords" content="qbead, quantum information science,
+quantum computing, STEM, science, science and art, physics, computer
+science, middle school, high school, textbook" />
   <title>Our Team</title>
   <style>
   </style>
@@ -39,14 +41,22 @@
 </div>
 <div id="title-bar" >
 <h1 class="title">Our Team</h1>
-<h2 class="subtitle">We are a group of volunteers with a passion for teaching science and building devices harnessing the most whimsical features of nature</h2>
+<h2 class="subtitle">We are a group of volunteers with a passion for
+teaching science and building devices harnessing the most whimsical
+features of nature</h2>
 </div>
 </header>
 <main>
 <div class="row dark">
 <div class="column long-text light" style="padding:1rem;">
-<p>For the last few years, our team has run educational events that have enabled thousands of attendees to experience the wonder of creating their own gadgets through science and engineering. We are proud to have channeled our passion for creating, teaching, and civil service to empower the next generation of makers. Through the Qbead, we hope to reach even more students.</p>
-<p>If you want to get in touch or have any questions, email <a href="mailto:mail@qbead.org">mail@qbead.org</a>.</p>
+<p>For the last few years, our team has run educational events that have
+enabled thousands of attendees to experience the wonder of creating
+their own gadgets through science and engineering. We are proud to have
+channeled our passion for creating, teaching, and civil service to
+empower the next generation of makers. Through the Qbead, we hope to
+reach even more students.</p>
+<p>If you want to get in touch or have any questions, email <a
+href="mailto:mail@qbead.org">mail@qbead.org</a>.</p>
 <figure>
 <!--IMAGE: team picture <img src="/images/behindthescenes/team_2.jpg">-->
 </figure>
@@ -93,7 +103,14 @@ Carlos
 <h2>
 Delft University of Technology, QuTech
 </h2>
-<p>Carlos loves science, crafts, and art, and sometimes combines them into a beautiful gadget like the Qbead. On top of that, he enjoys mentoring and contributing to diversity in science and engineering. Examples are organizing science-art workshops with asylum seekers in Sweden and the quantum hackathon iQuHACK at MIT. Now at Delft University of Technology and QuTech, Carlos is a professor exploring quantum photonics while he continues to lead outreach projects to democratize science and technology.</p>
+<p>Carlos loves science, crafts, and art, and sometimes combines them
+into a beautiful gadget like the Qbead. On top of that, he enjoys
+mentoring and contributing to diversity in science and engineering.
+Examples are organizing science-art workshops with asylum seekers in
+Sweden and the quantum hackathon iQuHACK at MIT. Now at Delft University
+of Technology and QuTech, Carlos is a professor exploring quantum
+photonics while he continues to lead outreach projects to democratize
+science and technology.</p>
 </div>
 </div>
 <div class="team-member">
@@ -105,7 +122,54 @@ Stefan
 <h2>
 University of Massachusetts Amherst
 </h2>
-<p>Since high school Stefan has enjoyed sharing the wonders of science with others, organizing extraculicular courses and summer break Physics events. While a graduate student at Yale’s Quantum Institute he felt most at home in Yale’s makerspace, preparing contraptions to be used in middle- and high-school outreach events. He continued his reasearch work on photonic quantum computers jointly at MIT and Harvard, but spends much of his free time designing hands-on outreach materials, including the <a href="https://spinwearables.com/">SpinWheel</a>. Now, as a professor at UMass Amherst, he is designing the Qbead as a way to bring the maker ethos to teaching Quantum Information Science.</p>
+<p>Since high school Stefan has enjoyed sharing the wonders of science
+with others, organizing extraculicular courses and summer break Physics
+events. While a graduate student at Yale’s Quantum Institute he felt
+most at home in Yale’s makerspace, preparing contraptions to be used in
+middle- and high-school outreach events. He continued his reasearch work
+on photonic quantum computers jointly at MIT and Harvard, but spends
+much of his free time designing hands-on outreach materials, including
+the <a href="https://spinwearables.com/">SpinWheel</a>. Now, as a
+professor at UMass Amherst, he is designing the Qbead as a way to bring
+the maker ethos to teaching Quantum Information Science.</p>
+</div>
+</div>
+<div class="team-member">
+<img src="/images/teampics/hugo_s.jpg">
+<div>
+<h1>
+Hugo
+</h1>
+<h2>
+MIT
+</h2>
+<p>Hugo appreciates taking part in various efforts promoting higher
+education in STEM to various communities. Since his undergraduate
+studies at the University of Ottawa, these have included participation
+in the university’s mini-courses program and engaging with elementary
+school students about being a grad student. He is currently a doctoral
+student in electrical engineering at MIT.</p>
+</div>
+</div>
+<div class="team-member">
+<img src="/images/teampics/saumil_s.jpg">
+<div>
+<h1>
+Saumil
+</h1>
+<h2>
+MIT
+</h2>
+<p>Saumil has always held a fascination for building things. As a
+graduate student at MIT, Saumil worked on silicon photonics, where he
+spent a great deal of time hacking together electronics and
+microcontrollers to run his experiments. He also enjoys teaching and has
+helped develop several courses and hands-on labs to introduce students
+to photonic hardware. Saumil is now a postdoc jointly at MIT and NTT
+Research, where he has continued his research at the intersection of
+optics and computing. He hopes to share his love of building hardware
+through the Qbead and inspire the next generation of quantum scientists
+and engineers.</p>
 </div>
 </div>
 <!--TODO: the other team members-->
