--- a/book/index.html
+++ b/book/index.html
@@ -11,7 +11,9 @@
   <meta property="og:description" content="" /><!--TODO-->
   <meta property="og:image" content="" /><!--TODO-->
   <link rel="image_src" href="" /><!--TODO-->
-  <meta name="keywords" content="qbead, quantum information science, quantum computing, STEM, science, science and art, physics, computer science, middle school, high school, textbook" />
+  <meta name="keywords" content="qbead, quantum information science,
+quantum computing, STEM, science, science and art, physics, computer
+science, middle school, high school, textbook" />
   <title>The Qbead Field Guide</title>
   <style>
   </style>
@@ -31,7 +33,8 @@
 <h1 class="title">The Qbead Field Guide</h1>
 </header>
 <main>
-<p>Welcome to the Qbead Field Guide! We hope you will enjoy learning to use the SpinWheel to uncover more about the world around you!</p>
+<p>Welcome to the Qbead Field Guide! We hope you will enjoy learning to
+use the SpinWheel to uncover more about the world around you!</p>
 </main>
 <div id="license">
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="/cc-by-sa.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
